# UTraffic-BE

./: .gitignore  FastAPI.md  README.md  docker-compose.yml  pdf_output.txt  pyproject.toml  structure.txt
nginx/: nginx.conf
notebooks/: 01_config.ipynb  02_db.ipynb  03_security.ipynb  04_correl.ipynb  05_graph.ipynb
scratch/: check_dashboard_db.py  check_db.py  check_db_active.py  check_model.py  check_snapshots.py  check_uq.py  debug_mappers.py  drop_constraint.py  drop_constraint_safe.py  drop_tables_force.py  seed_dashboard.py  terminate.py  test_auth.py  update_schema.py
scripts/: init_db.sql  patch_main.py  seed_correlation.py  seed_edge_correlation.py  seed_graph.py  upload_dmfm_to_s3.py
src/: main.py
src/api/: dependencies.py  router.py
src/api/middleware/: __init__.py  rate_limit.py  request_id.py
src/core/: config.py  exceptions.py  scheduler.py  security.py
src/db/: session.py
src/integrations/: cache_helpers.py  redis_client.py  tomtom.py
src/modules/auth/: router.py  schemas.py  service.py
src/modules/correlation/: router.py  schemas.py  service.py
src/modules/forecast/: __init__.py  router.py  schemas.py  service.py
src/modules/incidents/: __init__.py  router.py  schemas.py  service.py
src/modules/prediction/: router.py  service.py
src/modules/route_monitor/: __init__.py  router.py  schemas.py  service.py
src/modules/storage/: router.py
src/modules/traffic/: router.py  schemas.py  service.py
src/modules/traffic_dashboard/: router.py  schemas.py  service.py
src/storage/: database.py
src/storage/aws/: s3_client.ipynb  s3_client.py
src/storage/models/: __init__.py  auth.py  correlation.py  graph.py  incident.py  ml.py  traffic.py  traffic_dashboard.py
